Fix extensions badges and decorations positions

The extensions browser actions badges and decorations should
be positioned at the corners of the icon area, rather than the
corners of the full button's area (i.e. ignoring the paddings).

Screenshots: https://bugs.chromium.org/p/chromium/issues/detail?id=831946#c11

BUG=831946

Change-Id: I977883a3e6127e1f91779a7e73b4adb7fa7c6471
Reviewed-on: https://chromium-review.googlesource.com/1013290
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550855}
Former-commit-id: 94f048689670a751702fdd2e3c0b56e403d38964